# videoplayer

./: .gitignore  .gitmodules  CMakeLists.txt  glvideoplayer.cpp  glvideoplayer.h  image.frag  image.vert  main.cpp  resources.qrc  videoplayer.cpp  videoplayer.h
